# czap

./: .gitignore  README.md  items.json  pyproject.toml  scrapy.cfg
.github/: dependabot.yml
.github/workflows/: scrape.yml
czap/: exporters.py  parse_js.js  settings.py  spiders.py
